# measurement_server

./: .gitignore  README.md  package-lock.json  package.xml  setup.py
fkie_measurement_server/: package.xml  setup.cfg  setup.py
fkie_measurement_server/fkie_measurement_server/: __init__.py  commands.py  measurement_server.py  subscriptions.py  webserver.py  websocket.py
fkie_measurement_server/launch/: measurement_collector.launch.xml
fkie_measurement_server/nodes/: simple_collector_node.py
fkie_measurement_server/scripts/: measurement_collector_node.py
fkie_measurement_server_msgs/: CMakeLists.txt  package.xml  readme.md
fkie_measurement_server_msgs/msg/: CommandOut.msg
scripts/: measurement_collector_node.py
